Patch from [35] Better debugging messages, some refactoring thanks to John Lindal for the patch